clusters/labinfra/apps/portfolio.xuperson.org/portfolio-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/name: portfolio
    app.kubernetes.io/instance: portfolio
    app.kubernetes.io/managed-by: flux
