clusters/labinfra/apps/portfolio.xuperson.org/portfolio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-wordpress
  namespace: portfolio
  labels:
    app.kubernetes.io/name: portfolio-wordpress
    app.kubernetes.io/component: wordpress
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: portfolio-wordpress
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portfolio-wordpress
    spec:
      imagePullSecrets:
      - name: gitea-registry-secret
      containers:
      - name: wordpress
        image: git.xuperson.org/helloroot/portfolio-app:main-3316b11 # {"$imagepolicy": "portfolio:portfolio-app"}
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: 512Mi
            cpu: 250m
          limits:
            memory: 1Gi
            cpu: 500m
        livenessProbe:
          httpGet:
            path: /wp-admin/install.php
            port: http
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /wp-login.php
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
          successThreshold: 1
        securityContext:
          runAsUser: 33
          runAsGroup: 33
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      securityContext:
        fsGroup: 33
        runAsUser: 33
        runAsGroup: 33
        runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-wordpress
  namespace: portfolio
  labels:
    app.kubernetes.io/name: portfolio-wordpress
    app.kubernetes.io/component: wordpress
    app.kubernetes.io/managed-by: flux
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: portfolio-wordpress
