clusters/labinfra/apps/portfolio.xuperson.org/portfolio-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
  labels:
    app.kubernetes.io/name: portfolio
    app.kubernetes.io/component: service
    app.kubernetes.io/managed-by: flux
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/instance: portfolio-wordpress
